@@ -1,6 +1,7 @@
 v1.2.3 - Pending
 	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
 	+ Significantly reduced wakeups/sec according to powertop
+	+ Add stream name as a formatting option
 	+ Added Italian translation (Gianni Vialetto)
 	+ Added Swedish translation (Daniel Nylander)
 	+ Added Dutch translation (Olivier)
